objects/LLC_BI__Debt_Schedule__c.object
<CustomObject>
    <description>The Debt Schedule Object stores the debt schedule information at different points in time.</description>
    <fields>
        <fullName>LLC_BI__Credit_Pull_Date__c</fullName>
        <description>The system populates this field to indicate the date of the credit report which is providing the debt information within the Debt Schedule.</description>
        <label>Credit Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Schedule_Date__c</fullName>
        <description>Users populate this required date field with the Debt Schedule&apos;s date. By default, the system populates this field with the date the user initially creates the Debt Schedule.</description>
        <label>Debt Schedule Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Schedule_Description__c</fullName>
        <description>Users populate this optional text field with a description of the Debt Schedule.</description>
        <label>Debt Schedule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Updated__c</fullName>
        <description>This field is autopopulated with the date the Debt Schedule was last updated.</description>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Current_Debt_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contains the calculated total of the monthly debts within the Current Debt section of Debt Schedule.</description>
        <label>Monthly Current Debt Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Proposed_Debt_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contains the calculated total of the monthly debts within the Proposed Debt section of Debt Schedule.</description>
        <label>Monthly Proposed Debt Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this lookup field to associate a Debt Schedule to a relationship on the Relationship object.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debt Schedules</relationshipLabel>
        <relationshipName>Debt_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Monthly_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field represents the total of all the obligations owed on a monthly basis.</description>
        <label>Total Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Debt Schedule</label>
    <nameField>
        <label>Debt Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debt Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>